--- a/index.html
+++ b/index.html
@@ -3,10 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css"/>
     <title>Random User Generator</title>
 </head>
 <body>
-    <div id="app"></div>
+    <div id="app">
+        <img v-bind:src="picture" alt=""/>
+        <h1>{{firstname}} {{lastName}}</h1>
+        <h3>Email: {{email}}</h3>
+        <button>Get Random User</button>
+    </div>
     
     <script src="https://unpkg.com/vue@3.3.4"></script>
     <script src="app.js"></script>
