--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <div id="app">
-        <img v-bind:src="picture" alt=""/>
-        <h1>{{firstname}} {{lastName}}</h1>
+        <img :class="gender" v-bind:src="picture" :alt="`${firstName} ${lastName}`"/>
+        <h1>{{firstName}} {{lastName}}</h1>
         <h3>Email: {{email}}</h3>
-        <button>Get Random User</button>
+        <button v-on:click="getUser()" class="gender">Get Random User</button>
     </div>
     
     <script src="https://unpkg.com/vue@3.3.4"></script>
