--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <img :class="gender" v-bind:src="picture" :alt="`${firstName} ${lastName}`"/>
         <h1>{{firstName}} {{lastName}}</h1>
         <h3>Email: {{email}}</h3>
-        <button v-on:click="getUser()" class="gender">Get Random User</button>
+        <button v-on:click="getUser()" :class="gender">Get Random User</button>
     </div>
     
     <script src="https://unpkg.com/vue@3.3.4"></script>
